--- a/NetEvent/Client/wwwroot/css/mud_customize.css
+++ b/NetEvent/Client/wwwroot/css/mud_customize.css
@@ -38,3 +38,11 @@
     color: inherit;
     background: inherit;
 }
+
+
+.d-fullwidth {
+    width: 100vw;
+    position: relative;
+    margin-left: -50vw;
+    left: 50%;
+}
