--- a/NetEvent/Client/Pages/Index.razor
+++ b/NetEvent/Client/Pages/Index.razor
@@ -6,7 +6,7 @@
     <MudPaper Class="mud-theme-primary pa-4 ma-4">
         @if (_UpcomingEvent == null)
         {
-            <MudText Typo="Typo.h3">@Localize["Index.NoUpcomingMatch"]</MudText>
+            <MudText Typo="Typo.h3">@Localize["Index.NoUpcomingEvent"]</MudText>
         }
         else
         {
