--- a/NetEvent/Client/Pages/Administration/Events/Events.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Events.razor
@@ -34,6 +34,7 @@
                     </MudPaper>
 
                     <MudText Typo="Typo.body2">@eventDto.StartDate?.ToString("d", CultureInfo.CurrentUICulture) - @eventDto.EndDate?.ToString("d", CultureInfo.CurrentUICulture)</MudText>
+                    <MudText Typo="Typo.body2">@eventDto.Venue?.Name</MudText>
 
                 </CardHeaderContent>
                 <CardHeaderActions>
