--- a/NetEvent/Client/Pages/Administration/Events/Event.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Event.razor
@@ -8,6 +8,7 @@
 @using NetEvent.Client.Extensions
 @using NetEvent.Shared.Config
 @using NetEvent.Shared.Dto
+@using NetEvent.Shared.Dto.Event
 @using TinyMCE.Blazor
 
 @if (_Loading)
@@ -83,6 +84,20 @@
                         </MudSelect>
                     </MudItem>
                     <MudItem xs="12" sm="6">
+                        <MudSelect T="VenueDto" @bind-Value="_Event.Venue"
+                               For="@(() => _Event.Venue)" 
+                               Clearable="true"
+                               Margin="Margin.Dense"
+                               Label="@Localize["Administration.Events.Event.Venue"]"
+                               Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
+
+                            @foreach (var venue in _Venues)
+                            {
+                                <MudSelectItem Value="@venue">@venue.Name</MudSelectItem>
+                            }
+                        </MudSelect>
+                    </MudItem>
+                    <MudItem xs="6" sm="3">
                         <MudTextField T="DateTime?"
                                   @bind-Value="_Event.StartDate"
                                   For="@(() => _Event.StartDate)"
@@ -92,7 +107,7 @@
                                   Variant="Variant.Outlined"
                                   InputType="InputType.DateTimeLocal" />
                     </MudItem>
-                    <MudItem xs="12" sm="6">
+                    <MudItem xs="6" sm="3">
                         <MudTextField T="DateTime?"
                                   @bind-Value="_Event.EndDate"
                                   For="@(() => _Event.EndDate)"
