--- a/NetEvent/Client/Pages/Administration/Events/Events.razor
+++ b/NetEvent/Client/Pages/Administration/Events/Events.razor
@@ -13,7 +13,7 @@
 
 <div class="d-flex align-stretch flex-wrap gap-4 ma-4">
 
-    <MudButton Class="d-flex flex-grow-1 flex-column" Style="width: 200px; max-width: 300px;" Variant="Variant.Outlined" Color="Color.Primary" StartIcon="@Icons.Material.Outlined.Add" Href="@UrlHelper.GetEventLink("new")">@Localize["Administration.Events.Event.Create"]</MudButton>
+    <MudButton Class="d-flex flex-grow-1 flex-column" Style="width: 200px; max-width: 300px;" Variant="Variant.Outlined" Color="Color.Primary" StartIcon="@Icons.Material.Outlined.Add" Href="@UrlHelper.GetEventLink("new" , true)">@Localize["Administration.Events.Event.Create"]</MudButton>
 
     @if (_Loading)
     {
@@ -49,7 +49,7 @@
                 }
             </MudCardContent>
             <MudCardActions>
-                <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@UrlHelper.GetEventLink(eventDto.Id!)" StartIcon="@Icons.Material.Outlined.Edit">@Localize["Administration.Events.Event.Edit"]</MudButton>
+                <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@UrlHelper.GetEventLink(eventDto.Id!, true)" StartIcon="@Icons.Material.Outlined.Edit">@Localize["Administration.Events.Event.Edit"]</MudButton>
                 <MudButton Variant="Variant.Text" Color="Color.Error" OnClick="@(async () => await DeleteEvent(eventDto))" StartIcon="@Icons.Material.Outlined.Delete">@Localize["Administration.Events.Event.Delete"]</MudButton>
             </MudCardActions>
         </MudCard>
