Update to .Net7

--- a/NetEvent/Client/Pages/Index.razor
+++ b/NetEvent/Client/Pages/Index.razor
@@ -7,7 +7,7 @@
 
     @if (_UpcomingEvent?.Id == null)
     {
-        <MudPaper Class="mud-theme-primary pa-4 ma-4">
+        <MudPaper Class="mud-theme-primary pa-4 ma-4 d-flex align-content-center align-content-center flex-wrap" MaxWidth="800px;" MinHeight="200px;">
             <MudText Typo="Typo.h3">@Localize["Index.NoUpcomingEvent"]</MudText>
         </MudPaper>
     }
