--- a/NetEvent/Client/Pages/Administration/Settings.razor
+++ b/NetEvent/Client/Pages/Administration/Settings.razor
@@ -1,5 +1,5 @@
 ﻿@page "/administration/settings"
-@attribute [Authorize(Policy = "Admin.Settings.*")]
+@attribute [Authorize(Policy = "Admin.System.*")]
 @inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
 
 @using Microsoft.AspNetCore.Authorization
@@ -8,7 +8,7 @@
 
 <MudTabs Elevation="2" Rounded="true" ApplyEffectsToContainer="true" PanelClass="pa-6">
 
-    <AuthorizeView Policy="Admin.Settings.Organization.*">
+    <AuthorizeView Policy="Admin.System.*">
         <Authorized>
 
             @foreach (var settingsGroup in _SystemSettings.SettingsGroups)
