--- a/NetEvent/Client/Pages/Administration/SystemInfo.razor
+++ b/NetEvent/Client/Pages/Administration/SystemInfo.razor
@@ -1,5 +1,5 @@
 ﻿@page "/administration/systeminfo"
-@attribute [Authorize(Policy = "Admin.SystemInfo.*")]
+@attribute [Authorize(Policy = "Admin.System.*")]
 
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
