--- a/NetEvent/Client/Shared/NavigationBar.razor
+++ b/NetEvent/Client/Shared/NavigationBar.razor
@@ -20,7 +20,7 @@
 
 <AuthorizeView>
     <Authorized>
-        <MudMenu Label="@Localize["Shared.NavigationBar.Hello", context.User.Identity?.Name!]" ActivationEvent="@MouseEvent.MouseOver" Variant="Variant.Text" AnchorOrigin="Origin.BottomRight" DisableElevation="true" Color="Color.Primary" EndIcon="@Icons.Filled.KeyboardArrowDown" IconColor="Color.Secondary">
+        <MudMenu Label="@Localize["Shared.NavigationBar.Hello", context.User.Identity?.Name!]" Variant="Variant.Text" AnchorOrigin="Origin.BottomRight" Color="Color.Primary" EndIcon="@Icons.Filled.KeyboardArrowDown" IconColor="Color.Secondary">
             <MudMenuItem Href="profile/manage" Icon="@Icons.Material.Outlined.Person">@Localize["Shared.NavigationBar.Profile"]</MudMenuItem>
 
             <AuthorizeView Context="admin" Policy="Admin.*">
