--- a/NetEvent/Client/Pages/LegalNotice.razor
+++ b/NetEvent/Client/Pages/LegalNotice.razor
@@ -13,6 +13,9 @@
 }
 else
 {
+    <MudText Typo="Typo.h2">@Localize["LegalNotice.LegalNotice"]</MudText>
     <MudText>@((MarkupString)_LegalNotice)</MudText>
+
+    <MudText Typo="Typo.h2">@Localize["LegalNotice.PrivacyPolicy"]</MudText>
     <MudText>@((MarkupString)_PrivacyPolicy)</MudText>
 }
