--- a/NetEvent/Client/Components/ImageValueTypeUpload.razor
+++ b/NetEvent/Client/Components/ImageValueTypeUpload.razor
@@ -8,7 +8,7 @@
 
     @if (string.IsNullOrEmpty(imageFileName))
     {
-        <MudText Typo="Typo.h6">@Localize["ImageValueTypeUpload.DragAndDropHint"]</MudText>
+        <MudText Typo="Typo.body2">@Localize["ImageValueTypeUpload.DragAndDropHint"]</MudText>
     }
 
     @if (uploading)
@@ -20,7 +20,7 @@
     @if (!string.IsNullOrEmpty(imageFileName))
     {
         <div class="container">
-            <MudImage Src="@imageSrc"></MudImage>
+            <MudImage Src="@imageSrc" Fluid="true"></MudImage>
             <MudButton OnClick="Clear" Class="show-on-hover center-in-container" Color="Color.Error" StartIcon="@Icons.Material.Filled.Delete" Variant="Variant.Text">@Localize["ImageValueTypeUpload.Clear"]</MudButton>
         </div>
     }
