--- a/NetEvent/Client/Pages/Login.razor
+++ b/NetEvent/Client/Pages/Login.razor
@@ -3,7 +3,7 @@
 
 @inject Microsoft.Extensions.Localization.IStringLocalizer<App> Localize
 
-<MudGrid Class="mt-4">
+<MudGrid Class="mt-4 justify-center">
     @if (IsStandardEnabled)
     {
         <MudItem md="6">
@@ -11,11 +11,14 @@
                 <DataAnnotationsValidator />
                 <MudCard>
                     <MudCardHeader>
-                        @if (!string.IsNullOrEmpty(_Logo))
-                        {
-                            <MudImage Src="@_Logo" Class="img-logo"></MudImage>
-                        }
-                        <h3>@Localize["Login.Title"]</h3>
+                        <div>
+                            @if (!string.IsNullOrEmpty(_Logo))
+                            {
+                                <MudImage Src="@_Logo" Class="background-logo" Style="max-width:100%; max-height: 200px;"></MudImage>
+                            }else{
+                                <h3>@Localize["Login.Title"]</h3>
+                            }
+                        </div>
                     </MudCardHeader>
                     <MudCardContent>
                         <MudTextField id="Input.Email" Label="@Localize["Login.Title"]" @bind-Value="LoginRequest.UserName" For="@(() => LoginRequest.UserName)" />
