Add HideOrganizationNameInNavBar Setting

--- a/NetEvent/Client/Shared/MainLayout.razor
+++ b/NetEvent/Client/Shared/MainLayout.razor
@@ -26,7 +26,10 @@
             {
                 <MudImage Src="@_Logo" Class="img-logo" Style="height: var(--mud-appbar-height);"></MudImage>
             }
-            <h1>@_OrganizationName</h1>
+            @if (!_HideOrganizationNameInNavBar)
+            {
+                <h1>@_OrganizationName</h1>
+            }
         </MudButton>
         <NavigationBar />
     </MudAppBar>
