--- a/NetEvent/Client/Pages/Events/Event.razor
+++ b/NetEvent/Client/Pages/Events/Event.razor
@@ -59,6 +59,6 @@
     }
     else
     {
-        <MudText Typo="Typo.h2" Class="ma-4">Event not found</MudText>
+        <MudText Typo="Typo.h2" Class="ma-4">@Localize["Events.Event.NotFound"]</MudText>
     }
 </div>
